fix styling jump on selection

--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,12 @@
-body {
-  width: 800px;
-}
-
 table#grid {
   border-collapse: collapse;
-  max-width: 100vh;
-}
-
-tr {
+  max-width: calc(min(100vh, 100vw));
+  table-layout: fixed;
 }
 
 td, th {
   padding: 10px;
-  width: 25%;
+  width: 20%;
 }
 
 td {
@@ -22,7 +16,8 @@ td {
 .form-container {
   width: 100%;
   display: flex;
-  gap: 10px;
+  justify-content: space-between;
+  gap: 5px;
 }
 
 .dropdown-menu {
@@ -33,13 +28,14 @@ td {
 
 .additional-fields {
   flex-shrink: 1;
-  min-width: 0;
-  max-width: 25%;
+  max-width: 30%;
 }
 
 .additional-fields input {
   min-width: 0;
-  width: 50%;
+  width: 70%;
+  margin: 0 -1.6px;
+  padding: 1px 0;
 }
 
 .cell {
